--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
     color: var(--font-color);
 }
 
+.Toastify__toast {
+    background-color: var(--background-color) !important;
+    border: 0.1px solid grey !important;
+}
+
 a{
     color: black;
     text-decoration: none;
@@ -27,7 +32,7 @@ html{
     --font-size: 16px;
     --border-radius: 4px; 
     --transparent-button:transparent;
-    --button-padding:5px 15px;
+    --button-padding:6px 20px;
     --button-base-color:#847167;
     --outline-none:none;
     --border-none:none;
