--- a/src/Components/MCQ/MCQ.css
+++ b/src/Components/MCQ/MCQ.css
@@ -1,6 +1,5 @@
 .outer-wrapper {
   /* border: 3px solid yellow; */
-  
 }
 
 .single-box img {
@@ -11,23 +10,27 @@
 .main-container-experi {
   /* border: 5px solid red; */
   width: 100vw;
-  display: flex; 
+  display: flex;
 }
 
 .input-feed {
   /* border: 1px solid red; */
   flex: 1;
-  border-right: 0.1px solid grey;
-  padding-top: 1.5%;
-  margin-top:60px ;
+  /* border-right: 0.1px solid grey; */
+  padding-top: 2%;
+  margin-top: 60px;
+  /* height: 100vh; */
 }
 
 .input-field-wrapper {
   /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .input-field-wrapper input {
-  padding: 3px 15px;
+  padding: 4px 15px;
   outline: var(--outline-none);
   border: 0.5px solid gray;
   border-radius: var(--border-radius-3);
@@ -37,11 +40,20 @@
 .mcq-feed,
 .btn-wrapper {
   /* border: 1px solid red; */
-  text-align: center;
+  width: 38%;
+  display: flex;
+  justify-content: space-between;
+
   margin: 10px 0px;
   input {
     margin-left: 20px;
   }
+}
+
+.btn-wrapper {
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
 }
 
 .btn-wrapper button {
@@ -55,8 +67,11 @@
   padding: 3px 10px;
 }
 
+.generate-mcq-btn {
+  cursor: pointer;
+}
 .hr-line {
-  margin: 50px 0px;
+  margin: 20px 0px;
 }
 
 .suggestion-box {
@@ -73,7 +88,7 @@
 }
 
 .single-box {
-  border: 1px solid grey;
+  border: 1px solid #808080;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,6 +96,7 @@
   margin: 10px 20px;
   padding-right: 15px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .loader {
@@ -103,17 +119,18 @@
 
 .display-result {
   /* border: 1px solid red; */
+  border-left: 0.5px solid grey;
   flex: 1;
-  margin-top:60px ;
+  margin-top: 60px;
 }
 
 .result {
   /* border: 5px solid yellow; */
-  padding: 1% 5%;
-  height: 88vh;
+  /* border-left: 0.5px solid grey; */
+  height: 85vh;
   overflow-y: scroll;
   padding: 1% 5%;
-  padding-top: 3%;
+  margin-bottom: 5.5%;
 }
 
 @keyframes loader {
@@ -151,14 +168,30 @@
     display: none;
   }
 
-  .result{
-margin-bottom: 100px;
+  .result {
+    margin-bottom: 5%;
   }
 
-  .input-feed{
+  .input-feed {
     position: fixed;
     bottom: 0px;
     width: 100%;
     /* border: 1px solid red; */
+  }
+
+  .topic-name,
+  .mcq-feed,
+  .btn-wrapper {
+    width: 100%;
+    padding: 0% 5%;
+    /* border: 1px solid red; */
+
+  }
+
+   
+
+  .input-field-wrapper input {
+    width: 100%;
+    padding: 5px 10px;
   }
 }
