--- a/src/Components/ReuseableCompo/Navbar.css
+++ b/src/Components/ReuseableCompo/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    border: 0.1px solid gray;
+    border-bottom: 0.1px solid gray;
     position: fixed;
     width: 100%;
 }
