--- a/src/Pages/LoginPage/LoginPage.css
+++ b/src/Pages/LoginPage/LoginPage.css
@@ -5,6 +5,8 @@
   background-color: var(--white-color);
 }
 
+
+
 .header {
   /* border: 1px solid red; */
   border-bottom: 0.5px solid grey;
@@ -63,7 +65,7 @@
     border-radius: var(--border-radius-3);
   }
   .login-button {
-    color: var(--white-color);
+    color: var(--white-color) !important;
   }
 }
 
@@ -120,6 +122,7 @@
   .header {
     a {
       margin: 12px 15px;
+      color: var(--white-color);
     }
   }
 }
