--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -21,7 +21,7 @@
 
 .input-topic-wrapper input,
 .project-num-wrapper input {
-  width: 50%;
+  /* width: 50%; */
   outline: none;
   border: 0.5px solid grey;
   border-radius: 3px;
@@ -227,6 +227,6 @@
     width: 100%;
   }
   .generate-proj-btn button {
-    padding: 5px 10px;
+    padding: 6px 10px;
   }
 }
