btn bottom fixed

--- a/src/Components/MCQ/MCQ.css
+++ b/src/Components/MCQ/MCQ.css
@@ -191,8 +191,8 @@
   }
 
   .btn-wrapper .generate-mcq-btn{
-    width: 55%;
-    padding: 5px 10px;
+    /* width: 55%; */
+    padding: 7px 10px;
   }
    
 
