--- a/src/Components/ReuseableCompo/Navbar.css
+++ b/src/Components/ReuseableCompo/Navbar.css
@@ -14,6 +14,12 @@
     font-size: 14px;
 }
 
+.nav-options span.active {
+    text-underline-offset: 5px;
+    text-decoration: underline;
+  }
+  
+
 .profile-picture img{
     width: 40px;
     height: 40px;
