--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -127,7 +127,7 @@
 .project-entry {
   border: 0.5px solid grey;
   border-radius: 3px;
-  /* width: 110px; */
+  width: 135px;
   height: 50px;
   padding: 4px 2%;
   margin: 5px 10px;
@@ -187,8 +187,8 @@
     width: 100%;
     padding: 0px 5%;
   }
-  .projects-list {
-    padding: 1% 3%;
+  .project-entry {
+width: 120px;
   }
 }
 
