--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -28,6 +28,10 @@
   padding: 4px 2%;
 }
 
+.hr-line{
+  margin: 20px 0px;
+}
+
 .simple-text {
   /* border: 3px solid rgb(223, 63, 63); */
   flex: 1;
@@ -106,7 +110,7 @@
 }
 
 .history-section h3 {
-  margin: 30px 0px;
+  margin-top: 25px;
 }
 
 .projects-list {
@@ -123,13 +127,31 @@
   border: 0.5px solid grey;
   border-radius: 3px;
   width: 100px;
-  height: 50px;
-  padding: 4px 2%;
+  /* height: 50px; */
+  /* padding: 4px 2%; */
   /* margin: 5px 10px; */
   cursor: pointer;
 
   min-width: 135px;
   margin: 10px 20px; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.image-container{
+  height: 50px;
+}
+
+.image-container img{
+  width: var(--img-width-small-card);
+  height: var(--img-height-small-card);
+}
+
+.topic-text h5{
+  text-decoration: none !important;
+
 }
 
 .generate-proj-btn {
@@ -240,5 +262,8 @@ width: 120px;
   }
   .generate-proj-btn button {
     padding: 7px 10px;
+  }
+  .hr-line {
+    display: none;
   }
 }
